# CoVision

./: .firebaserc  .gitignore  .pre-commit-config.yaml  README.md  app.py  firebase.json  requirements.txt  workspace.code-workspace
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
classification_model_training/: predict.py  train.py
classification_model_training/files_from_makeathon/: EffNet_command_trainer.ipynb  README.md  captum_insights.py  dvc.yaml  export.py  params.yaml  predict.py  pyproject.toml  run_ray_tune.py  train.py
classification_model_training/files_from_makeathon/data/: test.dvc  train.dvc
classification_model_training/files_from_makeathon/models/: .gitignore  metrics-evaluate.json  metrics-training.json
classification_model_training/files_from_makeathon/notebooks/: crop.ipynb
classification_model_training/files_from_makeathon/pipelines/export/: dvc.yaml  params.yaml
classification_model_training/files_from_makeathon/utils/: calc_mean_std.py  training_loops.py
classification_model_training/lightning_ai/: Model_Execution.ipynb  trainer.py
classification_model_training/lightning_ai/models/: classification_models.py
classification_model_training/lightning_ai/utils/: data.py
classification_model_training/sample_data/test/: test.csv
classification_model_training/sample_data/train/: train.csv
classification_model_training/tfjs/: README.md  eval.js
classification_model_training/utils/: calc_stratified_folds.py  data.py  earlystopping.py  training_loops.py
cloud-bucket-upload-page/: index.html  styles.css  thankYou.css  thankYou.html
covision-app/: .gitignore  Makefile  capacitor.config.ts  ionic.config.json  package-lock.json  package.json
covision-app/android/app/: build.gradle
covision-app/public/: index.html
covision-app/src/: App.tsx  index.tsx
covision-app/src/api/: getValidTestArea.tsx  runBarcodeScan.tsx  runClassifierAnalysis.ts  runYolov5Analysis.ts  showWelcomeText.ts  useClassifierAnalysis.ts  usePipeline.tsx  useYolov5Analysis.ts  warmUp.tsx
covision-app/src/components/: CovCamera.tsx  Scanner.jsx  Scanner.tsx
covision-app/src/data/: instructions.jsx
covision-app/src/pages/: Home.tsx  (+7 more)
covision-training/: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  yolov5_training.ipynb
covision-training/covision-object-detection/yolov5s-covision-train/: .gitignore  opt.yaml  results.csv
covision-training/covision-object-detection/yolov5s-covision-train/weights/: .gitignore
covision-training/data/: raw.dvc
covision-training/data/labels/: rapid_test_IMG_2536.txt  rapid_test_IMG_2559.txt  rapid_test_IMG_2690.txt
covision-training/templates/: index.html
object_detection_2024/: Kit_and_membrane_segmentation.ipynb  Segmentation_Training.ipynb  config_segmentation.yaml  dataset_segmentation.py  inference_segmentation.py  membrane_zone_extractor.py  model_segmentation.py  training_segmentation.py  training_segmentation_OLD.py  transformations_segmentation.py
object_detection_2024/utils_segmentation/: utils.py  utils_dataset.py  visualization.py
(+13 files in other folders)
