[tool.poetry]
name = "covision-object-detection"
version = "0.1.0"
description = ""
authors = ["Juan Pizarro <jpizarrom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
ultralytics = "^8.0.180"
torch = "2.0.0"
tensorflow = "^2.13.0"
dvc = "^3.20.0"
tensorflowjs = "^4.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
