[tool.poetry]
name = "covision-classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "2.0.1"
albumentations = "1.3.0"
numpy = "<1.24"
torch = [
    { url = "https://download.pytorch.org/whl/cu111/torch-1.10.0%2Bcu111-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux' and platform_machine != 'aarch64'"},
]
torchvision = [
    { url = "https://download.pytorch.org/whl/cu111/torchvision-0.11.0%2Bcu111-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux' and platform_machine != 'aarch64'", python = ">=3.9 <3.10"},
]
efficientnet-pytorch = "0.7.1"
tensorflow-gpu = "2.8.0"
onnx-tf = "1.10.0"
tensorflow-probability = "0.14.0"
keras = "2.8.0"
tensorflowjs = "3.15.0"
matplotlib = "<3.5"
timm = "^0.9.5"
wandb = "<0.15.8"
omnixai = {extras = ["vision"], version = "^1.3.1"}
captum = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pre-commit = "^3.4.0"
notebook = "^7.0.3"
jupyterlab = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
